--- a/source/layouts/post.haml
+++ b/source/layouts/post.haml
@@ -1,7 +1,7 @@
 %main.content{role: :main}
   %article.post.tag-getting-started
     %header.post-header
-      %a.blog-logo{href: '/'}
+      %a.blog-logo{href: '#'}
         - if blog_logo?
           = image_tag blog_logo, alt: 'Blog Logo'
         - else
